# sap_ddic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.venv_antigravity/: pyvenv.cfg
backend/: __init__.py  cache.py  config.py  connection.py  dbt_generator.py  ddic_repository.py  heuristics.py  logger.py  main.py  mart_generator.py  schemas.py  security.py  service.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  dbtGenerator.js  exports.js  graph.js  jsonViewer.js  martGenerator.js  render.js  state.js  tabs.js  tcodeSearch.js  views.js
tests/: __init__.py  test_cache.py  test_dbt_generator.py  test_ddic_repository.py  test_heuristics.py  test_mart_generator.py
