[project]
name = "sap-ddic"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "hdbcli>=2.29.23",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-hana>=4.6.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.50.0",
]

[project.scripts]
ddic = "backend.main:run"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
